<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_runtime" android:icon="@drawable/baseline_play_24" android:title="后端与运行状态" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_edit_location_alt_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_mock"
...
            android:title="@string/menu_gnss_mock" />
        <item
            android:id="@+id/nav_route_gallery"
            android:icon="@drawable/baseline_route_24"
            android:title="@string/menu_route_mock" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_setting" />
    </group>
</menu>

